# cpp-template

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  conanfile.txt
src/: main.cpp
tests/: tests.cpp
